Fix navbar alignment

--- a/src/app/components/galleryDisplayer/galleryDisplayer.scss
+++ b/src/app/components/galleryDisplayer/galleryDisplayer.scss
@@ -143,6 +143,7 @@
       @media screen and (max-width: 1024px) {
         max-width: 80%;
         margin: 0 auto;
+        width: 100%;
         padding-bottom: 3em;
       }
       .thumbnail {
