--- a/src/app/components/header/header.scss
+++ b/src/app/components/header/header.scss
@@ -144,6 +144,8 @@
       }
 
       &:not(.btn-popup) {
+        position: relative;
+
         &:hover,
         &.active {
           opacity: 1;
@@ -162,6 +164,7 @@
       &.btn-popup {
         position: relative;
         opacity: 1;
+        transform-origin: center;
         span {
           opacity: 0.6;
         }
@@ -175,15 +178,14 @@
         .popups {
           position: absolute;
           bottom: 100%;
-          // width: 100%;
+          min-width: 100%;
           display: flex;
           flex-direction: column;
           padding: 0.5em 1em;
           background: url("/bg/wave.png"), #0f0e0e;
           background-blend-mode: screen;
           opacity: 0.4;
-          // transform: translateX(0%);
-          left: -100%;
+          left: -1em;
           border-top: 20px solid var(--dgold);
           border-left: 5px solid var(--dgold);
           border-right: 5px solid var(--dgold);
